--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@tauri-apps/api": "^1"
+    "@tauri-apps/api": "^1",
+    "@types/chart.js": "^2.9.41",
+    "chart.js": "^4.4.3",
+    "moment": "^2.30.1",
+    "svelte-chartjs": "^3.1.5"
   },
   "devDependencies": {
     "@sveltejs/adapter-static": "^3.0.1",
